fixes grid, spacing and hero background image

--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,12 +1,30 @@
 @use '../utility/variables' as v;
 @use '../utility/functions' as f;
+@use '../utility/mixins' as m;
 
 .hero {
     background-color: v.$color-3;
-    background-image: linear-gradient(v.$color-3, v.$color-3),url("../../../src/img/hero-bg.png");
-    background-size: 100%;
+    background-image: linear-gradient(v.$color-3, v.$color-3),url("../../../src/img/hero-bg-sm.png");
+    background-size: 100%; 
     padding-top: calc(6rem + 40px);
     padding-bottom: 6rem;
+
+    @include m.breakpoint(small) {
+        background-image: linear-gradient(v.$color-3, v.$color-3),url("../../../src/img/hero-bg-md.png");
+    }
+
+    @include m.breakpoint(medium) {
+        background-image: linear-gradient(v.$color-3, v.$color-3),url("../../../src/img/hero-bg.png");
+    }
+
+    @include m.breakpoint(xlarge) {
+        background-size: 80%;
+    }
+
+    @include m.breakpoint(xxlarge) {
+        background-size: 70%;
+    }
+
     &__container {
         color: white;
     }
